// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shapeImageThreshold renders 0 1`] = `
Array [
  .c0 {
  shape-image-threshold: 0;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: 0;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: 0;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders function 1`] = `
Array [
  .c0 {
  shape-image-threshold: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: has;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: has;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders invalid theme path 1`] = `
Array [
  .c0 {
  shape-image-threshold: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders negative number 1`] = `
Array [
  .c0 {
  shape-image-threshold: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-image-threshold: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-image-threshold: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-image-threshold: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-image-threshold: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-image-threshold: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    shape-image-threshold: July;
  }
}

@media April {
  .c0 {
    shape-image-threshold: August;
  }
}

@media January {
  .c0 {
    shape-image-threshold: September;
  }
}

@media April {
  .c0 {
    shape-image-threshold: November;
  }
}

@media June {
  .c0 {
    shape-image-threshold: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    shape-image-threshold: July;
  }
}

@media April {
  .c0 {
    shape-image-threshold: August;
  }
}

@media January {
  .c0 {
    shape-image-threshold: September;
  }
}

@media April {
  .c0 {
    shape-image-threshold: November;
  }
}

@media June {
  .c0 {
    shape-image-threshold: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    shape-image-threshold: January;
  }
}

@media April {
  .c0 {
    shape-image-threshold: December;
  }
}

@media January {
  .c0 {
    shape-image-threshold: April;
  }
}

@media April {
  .c0 {
    shape-image-threshold: May;
  }
}

@media June {
  .c0 {
    shape-image-threshold: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    shape-image-threshold: January;
  }
}

@media April {
  .c0 {
    shape-image-threshold: December;
  }
}

@media January {
  .c0 {
    shape-image-threshold: April;
  }
}

@media April {
  .c0 {
    shape-image-threshold: May;
  }
}

@media June {
  .c0 {
    shape-image-threshold: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders postitive number 1`] = `
Array [
  .c0 {
  shape-image-threshold: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders string 1`] = `
Array [
  .c0 {
  shape-image-threshold: July;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: July;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: June;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: June;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeImageThreshold renders valid theme path 1`] = `
Array [
  .c0 {
  shape-image-threshold: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  shape-image-threshold: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
